# chess-mk3

./: .gitignore  Board.py  README.md  analyze_logs.py  first_algo_depth_1.txt  output.txt  requirement.txt  serial_port_reader.py  simulate_game_reader.py  test_hall_sensor.cpp  test_led_strip.cpp  time_one_function.py
chess_board/: .gitignore  CMakeLists.txt  platformio.ini
chess_board/lib/Board/: Board.cpp  Board.h  generate_killing_moves.cpp  generate_legal_moves.cpp  generrate_no_legal_moves.cpp  tree_traversal_functions.cpp
chess_board/lib/LedStrip/: LedStrip.cpp  LedStrip.h
chess_board/lib/MeasTime/: MeasTime.h
chess_board/lib/MoveSet/: MoveSet.cpp  MoveSet.h
chess_board/lib/Piece/: Piece.cpp  Piece.h
chess_board/src/: ATmega328P_main.cpp  main.cpp  x64_main.cpp
chess_board/test/: helpers.cpp  test_hall_sensor.cpp  test_led_strip.cpp  test_single_position.cpp
chess_board/test/test_performance_game/: test_performance_game.cpp
chess_board/test/test_performance_general_functions/: test_performance_general_functions.cpp
chess_board/test/test_performance_legal_moveset/: test_performance_legal_moveset.cpp
chess_board/test/test_performance_no_legal_moves/: test_performance_no_legal_moves.cpp
chess_board/test/test_performance_test_estimate_all_depth_1/: performance_test_estimate_all_depth_1.cpp
chess_board/test/test_performance_test_estimate_all_moves_for_color_white_depth_1_starting_pos/: performance_test_estimate_all_moves_for_color_white_depth_1_starting_pos.cpp
chess_board/test/test_unit/: test_unit.cpp
doc/: landing_page.md
(+11 files in other folders)
